Gestion de usuarios y cammbios varios.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/jquery-ui.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/Admin_Home.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap-select.min.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/market.css" media="screen" />	
 </head>
 
@@ -33,10 +34,8 @@
 			<ul class="nav nav-list">
 				<li class="nav-header">Administracion</li>
 				<li class="active"><a href="#">Inicio</a></li>
-				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialContenidos.xhtml">Contenidos</a></li>
-				<li><a href="#">Clientes</a></li>
-				<li><a href="#">Proveedores</a></li>
-				<li><a href="#">Cotizaciones</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialContenidos.xhtml">Contenidos</a></li>				
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialUsuarios.xhtml">Usuarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialAuditoria.xhtml">Registros de ingreso</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialComentarios.xhtml">Comentarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
@@ -58,8 +57,9 @@
 <script src="../js/holder.js"></script>
 <script src="../js/bootstrap.js"></script>
 <script src="../js/LlamadasAjax.js"></script>
-<script src="../js/admin.js"></script>
 <script src="../js/getSet.js"></script>
 <script src="../js/Prototipos.js"></script>
+<script src="../js/bootstrap-select.min.js"></script>
+<script src="../js/admin.js"></script>
 </html>
 
