Funcion de mostrar datos de usuario y editar (logica implementada). Listado de top contenidos por cantidad y tipo. Restriccion de funcionalidad de administrador en FiltroAutenticacion. Arreglos varios.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -33,7 +33,7 @@
 		<div class="col-md-2" style="margin-left: auto; background-color: rgb(230, 230, 230)">
 			<ul class="nav nav-list">
 				<li class="nav-header">Administracion</li>
-				<li class="active"><a href="#">Inicio</a></li>
+				<li class="active"><a href="/SERVER-MODULE-PRESENTATION/index.html">FrontEnd</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialContenidos.xhtml">Contenidos</a></li>				
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialUsuarios.xhtml">Usuarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialAuditoria.xhtml">Registros de ingreso</a></li>
@@ -41,6 +41,7 @@
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialParametros.xhtml">Parametros del sistema</a></li>
+				<li><a href="#" onclick="logoutUsuario()">Salir del sistema</a></li>
 			</ul>	
 		</div>
 		<div class="col-md-10">
