--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -69,7 +69,7 @@
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
 				<div class="caption">
 					<h3>Aplicacion 4</h3>
-					<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
+					<p>Laslasdkadjklasjd</p>
 					<p class="precio">
 						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
 						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
@@ -79,6 +79,66 @@
 			</div>
 		</div>
 	  
+		<div id="aplicacion2"  class="col-sm-5 col-md-3">
+			<div class="thumbnail">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
+				<div class="caption">
+					<h3>Aplicacion 3</h3>
+					<p>Descripcion</p>
+					<p class="precio">
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
+						USD 2.0
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div id="aplicacion2"  class="col-sm-5 col-md-3">
+			<div class="thumbnail">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
+				<div class="caption">
+					<h3>Aplicacion 3</h3>
+					<p>Descripcion</p>
+					<p class="precio">
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
+						USD 2.0
+					</p>
+				</div>
+			</div>
+		</div>
+
+				<div id="aplicacion2"  class="col-sm-5 col-md-3">
+			<div class="thumbnail">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
+				<div class="caption">
+					<h3>Aplicacion 3</h3>
+					<p>Descripcion</p>
+					<p class="precio">
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
+						USD 2.0
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div id="aplicacion2"  class="col-sm-5 col-md-3">
+			<div class="thumbnail">
+				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
+				<div class="caption">
+					<h3>Aplicacion 3</h3>
+					<p>Descripcion</p>
+					<p class="precio">
+						<a href="views/content.html?id=3" class="btn btn-primary" role="button">Ver</a>
+						<a href="http://localhost:8080/SERVER-MODULE-PRESENTATION/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
+						USD 2.0
+					</p>
+				</div>
+			</div>
+		</div>
+
 		<div id="aplicacion2"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu2.jpg" alt="img/mu2.jpg" class="img-thumbnail miniatura img-responsive">
@@ -347,118 +407,10 @@
                 <th>Calificacion</th>
             </tr>
         </thead>
-        <tbody>
-            <tr href="views/content.html?id=1" id="datosContenido1">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>Nullam sapien massa, aliquam in cursus ut, ullamcorper in tortor. Aliquam
-                    mauris arcu, tristique a lobortis vitae, condimentum feugiat justo.</td>
-                <td>4.0</td>
-                <td>2/5</td>
-            </tr>
-            <tr id="datosContenido2">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>Gratis</td>
-                <td>4/5</td>
-            </tr>
-            <tr id="datosContenido3">
-				<td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido4">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido5">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr href="views/content.html?id=1" id="datosContenido7" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>4.0</td>
-                <td>2/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>Gratis</td>
-                <td>4/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td>
-                    <img src="//placehold.it/50x50" class="img-responsive">
-                </td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-            <tr id="datosContenido6" onclick="verContenido()">
-                <td><img src="//placehold.it/50x50" class="img-responsive"></td>
-                <td><a href="views/content.html?id=1">Nombre</a></td>
-                <td>jdhjskhd asjhdjk ashjkd jkshdjksh jkhjk dhjkashdjkhasjkdhajkshdjkadjksh
-                    jkasd</td>
-                <td>12.0</td>
-                <td>5/5</td>
-            </tr>
-        </tbody>
+        <tbody id="cuerpoBusqueda"></tbody>
     </table>
     <div class="pagination pagination-mini" style="display: initial;">
-        <ul class="pager">
-            <li><a href="#">1</a>
-            </li>
-            <li><a href="#">2</a>
-            </li>
-            <li><a href="#">3</a>
-            </li>
-        </ul>
+        <ul class="pager" id="paginadoBusqueda"></ul>
     </div>
 </div>
 
