Reestructuracion de codigo, buscar terminado, barra de navegacion mejorada en todas las pantallas, ver perfil, entre otros cambios

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
-	<script src="js/jquery.min.js"></script>
+	<script src="js/Plugins/jquery.min.js"></script>
 </head>
 
 <body id="cuerpo" class="overlay" style="background-color: whitesmoke;">
@@ -54,7 +54,7 @@
 	</ul>
 </nav>
 
-	<div class="col-md-12" style="height:50px;"></div>
+<div class="col-md-12" style="height:50px;"></div>
 
 <div id="con-tenedor" class="row">
 
@@ -545,14 +545,14 @@
 	</div>
 </div>
 
-<script src="js/jquery-ui.js"></script>
+<script src="js/Plugins/jquery-ui.js"></script>
 <script src="js/globalesProyecto.js"></script>
 <script src="js/Prototipos.js"></script>
 <script src="js/Inicio.js"></script>
-<script src="js/holder.js"></script>
+<script src="js/Plugins/holder.js"></script>
 <script src="js/blockUI.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/bootstrap-select.min.js"></script>
+<script src="js/Plugins/bootstrap.js"></script>
+<script src="js/Plugins/bootstrap-select.min.js"></script>
 <script src="js/Objetos.js"></script>
 <script src="js/LlamadasAjax.js"></script>
 <script src="js/getSet.js"></script>
