--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
@@ -25,41 +25,46 @@
 
 <body>
 <!-- BARRA DE NAVEGACION -->
-    <nav id='caca' class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Desplegar navegación</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Market Place Tecnologo</a>
+<nav id='caca' class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse"
+            data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Desplegar navegación</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="127.0.0.1:8080/SERVER-MODULE-PRESENTATION">Market Place Tecnologo</a>
+    </div>
+  <div class="collapse navbar-collapse navbar-ex1-collapse"> 
+    <ul class="navbar-form navbar-left" role="search">
+        <div class="form-group col-xs-6">
+            <input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar" style="height: initial;">
         </div>
-      <div class="collapse navbar-collapse navbar-ex1-collapse"> 
-        <ul class="navbar-form navbar-left" role="search">
-            <div class="form-group col-xs-6">
-                <input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar" style="height: initial;">
-            </div>
-            <ul class="btn-group">
-                <button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
-                    <span class="glyphicon glyphicon-search"></span> Buscar</button>
-                <button class="btn btn-primary dropdown-toggle" type="button" onclick="verModales('configurarBusqueda');/*mostrarElemento('configurarBusqueda',true)*/"><span class="glyphicon glyphicon-cog"></span></button>
-            </ul>
+        <ul class="btn-group">
+            <button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
+                <span class="glyphicon glyphicon-search"></span> Buscar</button>
+            <button class="btn btn-primary dropdown-toggle" type="button" onclick="verModales('configurarBusqueda');/*mostrarElemento('configurarBusqueda',true)*/"><span class="glyphicon glyphicon-cog"></span></button>
         </ul>
-        <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
-            <a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
-            <ul class="dropdown-menu">
-                <li><a href="#" onclick="setRegistroTipo('proveedor');verModales('registroUsuario')">Soy Proveedor</a></li>
-                <li><a href="#" onclick="setRegistroTipo('cliente');verModales('registroUsuario')">Soy Cliente</a></li>
-            </ul>
-            <button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
+    </ul>
+    <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
+        <a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
+        <ul class="dropdown-menu">
+            <li><a href="#" onclick="setRegistroTipo('proveedor');verModales('registroUsuario')">Soy Proveedor</a></li>
+            <li><a href="#" onclick="setRegistroTipo('cliente');verModales('registroUsuario')">Soy Cliente</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
-            <a class="nick" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick </a>
-            <a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a>
+        <button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
+    </ul>
+    <ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
+        <a class="nick dropdown-toggle" data-toggle="dropdown" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/proveedor/AltaContenido.html">Crear Contenido</a></li>
+            <li><a id="dd_verPerfil" href="#">Ver Perfil</a></li>
+            <li class="divider"></li>
+            <li><a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a></li>
         </ul>
-    </nav>
+    </ul>
+</nav>
 
 <div class="col-md-12" style="height:50px;"></div>
 
