Calificar contenidos funcionando y arreglos varios

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -54,6 +54,7 @@
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialParametros.xhtml">Parametros del sistema</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialReclamos.xhtml">Gestión de reclamos</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCambiarContrasenia.xhtml">Cambiar contraseña</a></li>
 				<li><a href="#" onclick="logoutUsuario()">Salir del sistema</a></li>
 			</ul>	
 		</div>
