Gestion de accesos con filtros.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -16,17 +16,19 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap-select.min.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/market.css" media="screen" />	
 	<link rel="stylesheet" type="text/css" href="../css/css-popup.css" media="screen" />	
+	<link rel="stylesheet" type="text/css" href="../css/datepicker.css" media="screen" />
 	
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/jquery.min.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/jquery-ui.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/holder.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/bootstrap.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/LlamadasAjax.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/getSet.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Prototipos.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/bootstrap-select.min.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/admin.js"></script>
-	<script src="/SERVER-MODULE-PRESENTATION/js/Plugins/css-popup.js"></script>
+	<script src="../js/Plugins/jquery.min.js"></script>
+	<script src="../js/Plugins/jquery-ui.js"></script>
+	<script src="../js/Plugins/holder.js"></script>
+	<script src="../js/Plugins/bootstrap.js"></script>
+	<script src="../js/LlamadasAjax.js"></script>
+	<script src="../js/getSet.js"></script>
+	<script src="../js/Prototipos.js"></script>
+	<script src="../js/Plugins/bootstrap-select.min.js"></script>
+	<script src="../js/admin.js"></script>
+	<script src="../js/Plugins/css-popup.js"></script>
+	<script src="../js/Plugins/bootstrap-datepicker.js"></script>
 </head>
 
 <body>
