--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -69,7 +69,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Aplicaciones</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="container">
+	<div class="container" id="containerApp">
 		<div id="aplicacion1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -197,7 +197,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:white; text-align: right;">Libros</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="container">
+	<div class="container" id="containerLibro">
 		<div id="libro1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/li1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -266,7 +266,7 @@
 	</div>
 	<div class="col-md-12 separador"></div>
 	
-	<div class="container">
+	<div class="container" id="containerVideo">
 		<div id="video1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -555,6 +555,7 @@
 <script src="js/globalesProyecto.js"></script>
 <script src="js/Prototipos.js"></script>
 <script src="js/Inicio.js"></script>
+<script src="js/main.js"></script>
 <script src="js/Plugins/holder.js"></script>
 <script src="js/blockUI.js"></script>
 <script src="js/Plugins/bootstrap.js"></script>
