--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -612,7 +612,7 @@
 	            </div>
 			</div>
 			<div class="modal-footer">
-				<button class="btn" data-dismiss="modal">Close</button>
+				<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
 				<button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
 			</div>
 		</div>
